SERVER-19533: collStats through mongoS on sharded collection incorrectly scales avgObjSize